deployments/mc-server-manager/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-server-manager
  namespace: minecraft-server
spec:
  selector:
    app: mc-server-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
