deployments/mc-server-manager/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mc-server-manager-http
  namespace: minecraft-server
spec:
  parentRefs:
    - name: envoy-gateway
      sectionName: https
      kind: Gateway
      namespace: infra

  hostnames:
    - blamedevs.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mc-server-manager
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch

      backendRefs:
        - name: mc-server-manager
          namespace: minecraft-server
          port: 80
